--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,20 @@
-<h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
+<header >
+    <div class="menu container dFlex-jcsb align-center">
+        <h1><a href="#"><img src="../assets/images/logo1.png" alt="logo" width="80px" height="48px"></a></h1>
+        <nav>
+            <ul class="link-bar dFlex">
+              <li><a href="#">系列鏡框</a></li>
+              <li><a href="#">門市據點</a></li>
+              <li><a href="#">部落格</a></li>
+              <li><a href="#">常見問題</a></li>
+            </ul>
+        </nav>
+    </div>
+   
+</header>
+
+
+
+<!-- <a href="index.html">index</a>
 <a href="about.html">about</a>
-<a href="contact.html">contact</a>
+<a href="contact.html">contact</a> -->
