--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,3 +1,13 @@
+@import './untils/variable';
+@import './untils/mixin';
+
+@import './base/reset';
+@import './untils/flex';
+@import './base/base';
+@import './base/container';
+
+
+
 @import './layout/header.scss';
 @import './layout/footer.scss';
 
