--- a/assets/scss/base/_container.scss
+++ b/assets/scss/base/_container.scss
@@ -4,10 +4,10 @@
     padding-left: 12px;
     padding-right: 12px;
     
-    @include pad {
+    @include pad (){
         max-width: 968px;
       }
-    @include mobile {
+    @include mobile (){
         max-width: 720px;
       }
     
