--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,4 +1,108 @@
-.footer{
-  background: #69F0AE;
-  font-size: 64px;
+footer{
+  background-color:$mainColor;
+  padding-top: 48px;
+  @include mobile(){
+    padding-top: 24px;
+  }
+  .footer-group-top{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 32px;
+    border-bottom: 1px solid #ffffff;
+    @include mobile(){
+      padding-bottom: 24px;
+    }
+    
+  }
+  .footer-group-left{
+    a{
+      font-size: 2.25rem;
+      display: inline-block;
+      &:hover{
+        text-decoration: underline;
+      }
+      @include mobile(){
+        font-size: 1rem;
+      }
+    }
+    i{
+      font-size: 36px;
+      margin-right: 20px;
+      @include mobile(){
+        font-size: 18px;
+        margin-right: 10px;
+      }
+    }
+    .footer-linkBar{
+      display: flex;
+      margin-bottom: 24px;
+      li+li{
+        margin-left: 48px;
+      }
+      a{
+        font-size: 1rem;
+      }
+      @include mobile (){
+        display: none;
+      }
+      
+    }  
+  }
+  .sns-link{
+    display: flex;
+    .fa-brands{
+      font-size: 48px;
+      @include pad (){
+        font-size: 40px;
+      }
+      @include mobile (){
+        font-size: 24px;
+      }
+    }
+    li+li{
+      margin-left: 32px;
+      @include pad (){
+        margin-left: 16px;;
+      }
+      @include mobile (){
+        margin-left: 8px;
+      }
+    }
+    a:hover{
+      color: gray;
+
+    }
+  }
+  .footer-group-bottom{
+    display: flex;
+    justify-content: space-between;
+    color: #ffffff;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    @include mobile(){
+      flex-direction: column;
+      padding-top: 16px;
+      padding-bottom: 24px;
+    }
+    div{
+      font-size: 14px;
+      display: flex;
+      @include mobile(){
+        flex-direction: column;
+        font-size: 16px;
+      }
+    }
+  }
+  .footer-group-bottom-txt p+p{
+    margin-left: 48px;
+    @include mobile(){
+      margin-left: 0;
+      margin-top: 8px;
+    }
+  }
+  
 }
+
+
+
+
