--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,19 +1,65 @@
 
 header{
   background-color:$mainColor;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  .link-bar li+li{
-    margin-left: 64px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  @include mobile (){
+    padding-bottom: 0;
   }
-  .link-bar a{
-    font-size: 1.25rem;
-    &:hover{
-      text-decoration: underline;
+  
+  .menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+    @include mobile(){
+      flex-direction: column;
+      padding-left: 0;
+      padding-right: 0;
+    }
+    nav{
+      @include mobile(){
+        width: 100%;
+      }
+    }
+    h1{
+      @include mobile (){
+        align-self: start;
+        margin-left: 15px;
+        margin-bottom: 15px;
+      }
     }
     
   }
-
+.link-bar{
+    display: flex;
+    @include mobile(){
+      flex-wrap: wrap;
+    }
+    li+li{
+      margin-left: 64px;
+      @include mobile(){
+        margin-left: 0;
+      }
+    }
+    li{
+      @include mobile(){
+        width: 50%;
+        border: 1px solid #ffffff;
+      }
+    }
+    a{
+      font-size: 1.25rem;
+      @include mobile(){
+        padding-top: 12px;
+        padding-bottom: 12px;
+        text-align: center;
+      }
+      &:hover{
+        text-decoration: underline;
+      } 
+    }
+  }  
 }
 
 
