--- a/assets/scss/untils/_mixin.scss
+++ b/assets/scss/untils/_mixin.scss
@@ -23,3 +23,9 @@
     font-weight: 900;
     font-style:italic;
 }
+@mixin title3{
+    color: #000000;
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 32px;
+}
