新增款式頁面

--- a/assets/scss/untils/_variable.scss
+++ b/assets/scss/untils/_variable.scss
@@ -2,6 +2,9 @@
 $mainColor:#AA0601;
 $mainColor-light:#FBF2F2;
 $mainColor-dark:#650300;
+$sunglassColor1:#5F3E2D;
+$sunglassColor2:#B75929;
+
 
 // font-size
 $fz-default:16px;
