--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -10,6 +10,7 @@
 
 @import './layout/header.scss';
 @import './layout/footer.scss';
+@import './layout/style-nav.scss';
 
 
 @import './pages/index.scss';
