--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -3,7 +3,7 @@
         <h1><a href="index.html"><img src="../assets/images/logo1.png" alt="logo" width="80px" height="48px"></a></h1>
         <nav>
             <ul class="link-bar">
-              <li><a href="#">系列鏡框</a></li>
+              <li><a href="glassesStyle.html">系列鏡框</a></li>
               <li><a href="#">門市據點</a></li>
               <li><a href="#">部落格</a></li>
               <li><a href="faq.html">常見問題</a></li>
