--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -296,7 +296,7 @@
     text-align: center;
     margin-top: 48px;
     input{
-      width:416px;
+      max-width:416px;
       background-color:$mainColor;
       padding: 16px 0;
       color: #ffffff;
